# autocontent-status-dashboard

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: autoposter.yml
autoposter/: __init__.py  cli.py  config.py  content_generator.py  data_fetcher.py  poster.py  scheduler.py  storage.py  voice_model.py  workflows.py
data/: chudinnorukam_sample_posts.csv  content_plan.json  post_queue.MOVED.json  post_queue.json  post_queue.json.bak
docs/: index.html
docs/data/: content_plan.json  last_schedule.json  post_queue.json  voice_profile.json
scripts/: apply_hashtag_schedule.py  migrate_queue_to_db.py  sync_docs_data.py  train_from_samples.py  train_with_openai.py
status/: index.html
